--- a/LESS_New/constants/mixins/mixins.less
+++ b/LESS_New/constants/mixins/mixins.less
@@ -1,3 +1,4 @@
+/*Shadows*/
 .text-shadow (@string: 0 1px 3px rgba(0, 0, 0, 0.25)) {
 	text-shadow: @string;
 }
@@ -9,7 +10,7 @@
 .drop-shadow (@x: 0, @y: 1px, @blur: 2px, @spread: 0, @alpha: 0.25) {
 	-webkit-box-shadow:	@x @y @blur @spread rgba(0, 0, 0, @alpha);
 	-moz-box-shadow:	@x @y @blur @spread rgba(0, 0, 0, @alpha);
-	box-shadow:		@x @y @blur @spread rgba(0, 0, 0, @alpha);
+	box-shadow:			@x @y @blur @spread rgba(0, 0, 0, @alpha);
 }
 .inner-shadow (@x: 0, @y: 1px, @blur: 2px, @spread: 0, @alpha: 0.25) {
 	-webkit-box-shadow: inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
@@ -50,7 +51,7 @@
 .opacity (@opacity: 0.5) {
 	-webkit-opacity: 	@opacity;
 	-moz-opacity: 		@opacity;
-	opacity: 		@opacity;
+	opacity: 			@opacity;
 }
 
 .gradient (@startColor: #eee, @endColor: white) {
@@ -83,46 +84,46 @@
 	-o-transition:      @transition;  
 }
 .transform(@string){
-	-webkit-transform: @string;
+	-webkit-transform: 	 @string;
 	-moz-transform: 	 @string;
 	-ms-transform: 		 @string;
 	-o-transform: 		 @string;
 }
 .scale (@factor) {
-	-webkit-transform: scale(@factor);
+	-webkit-transform:   scale(@factor);
 	-moz-transform: 	 scale(@factor);
 	-ms-transform: 		 scale(@factor);
 	-o-transform: 		 scale(@factor);
 }
 .rotate (@deg) {
-	-webkit-transform: rotate(@deg);
+	-webkit-transform: 	 rotate(@deg);
 	-moz-transform: 	 rotate(@deg);
 	-ms-transform: 		 rotate(@deg);
 	-o-transform: 		 rotate(@deg);
 }
 .skew (@deg, @deg2) {
-	-webkit-transform:       skew(@deg, @deg2);
+	-webkit-transform:   skew(@deg, @deg2);
 	-moz-transform: 	 skew(@deg, @deg2);
 	-ms-transform: 		 skew(@deg, @deg2);
 	-o-transform: 		 skew(@deg, @deg2);
 }
 .translate (@x, @y:0) {
-	-webkit-transform:       translate(@x, @y);
+	-webkit-transform:   translate(@x, @y);
 	-moz-transform: 	 translate(@x, @y);
 	-ms-transform: 		 translate(@x, @y);
 	-o-transform: 		 translate(@x, @y);
 }
 .translate3d (@x, @y: 0, @z: 0) {
-	-webkit-transform:       translate3d(@x, @y, @z);
+	-webkit-transform:   translate3d(@x, @y, @z);
 	-moz-transform: 	 translate3d(@x, @y, @z);
 	-ms-transform: 		 translate3d(@x, @y, @z);
 	-o-transform: 		 translate3d(@x, @y, @z);
 }
 .perspective (@value: 1000) {
 	-webkit-perspective: 	@value;
-	-moz-perspective: 	@value;
-	-ms-perspective: 	@value;
-	perspective: 		@value;
+	-moz-perspective: 		@value;
+	-ms-perspective: 		@value;
+	perspective: 			@value;
 }
 .transform-origin (@x:center, @y:center) {
 	-webkit-transform-origin: @x @y;
