--- a/LESS_New/constants/elements.less
+++ b/LESS_New/constants/elements.less
@@ -1,3 +1,28 @@
+html {
+  font-family: "Helvetica Neue", Arial, Helvetica;
+  font-size: 62.5%;
+}
+p {
+  .font-size(14);
+}
+h1 {
+  .font-size(24);
+}
+h2 {
+  .font-size(22);
+}
+h3 {
+  .font-size(20);
+}
+h4 {
+  .font-size(18);
+}
+h5 {
+  .font-size(16);
+}
+
+
+
 /*Default Button styles*/
 .btn {
   display: inline-block;
