--- a/LESS_New/main.css
+++ b/LESS_New/main.css
@@ -1,5 +1,34 @@
 /*Shadows*/
+/*REM Font fallback */
 /*Default Constants */
+html {
+  font-family: "Helvetica Neue", Arial, Helvetica;
+  font-size: 62.5%;
+}
+p {
+  font-size: 14px;
+  font-size: 1.4rem;
+}
+h1 {
+  font-size: 24px;
+  font-size: 2.4rem;
+}
+h2 {
+  font-size: 22px;
+  font-size: 2.2rem;
+}
+h3 {
+  font-size: 20px;
+  font-size: 2rem;
+}
+h4 {
+  font-size: 18px;
+  font-size: 1.8rem;
+}
+h5 {
+  font-size: 16px;
+  font-size: 1.6rem;
+}
 /*Default Button styles*/
 .btn {
   display: inline-block;
@@ -69,6 +98,9 @@
   background-color: #ffff00;
 }
 /*Site Specific constants*/
+html {
+  font-family: "Helvetica Neue", Arial, Helvetica;
+}
 /*Main block css */
 /*All non classified css */
 /*If mobile first start with xs, if desktop first start with xl */
