Removed site specific constants as not needed

--- a/LESS_New/constants/elements.less
+++ b/LESS_New/constants/elements.less
@@ -19,9 +19,10 @@ h4 {
 }
 h5 {
   .font-size(16);
+  .rem-property(left, 20);
+  .rem-property(top, 15);
+  .padding(12, 16, 13, 26.5);
 }
-
-
 
 /*Default Button styles*/
 .btn {
