--- a/LESS_New/main.css
+++ b/LESS_New/main.css
@@ -1,5 +1,8 @@
 /*Shadows*/
 /*REM Font fallback */
+/*Padding and Margin for REM with PX fallback */
+/*Margins*/
+/*General property setting*/
 /*Default Constants */
 html {
   font-family: "Helvetica Neue", Arial, Helvetica;
@@ -28,6 +31,12 @@ h4 {
 h5 {
   font-size: 16px;
   font-size: 1.6rem;
+  left: 20px;
+  left: 2rem;
+  top: 15px;
+  top: 1.5rem;
+  padding: 12px 16px 13px 26.5px;
+  padding: 1.2rem 1.6rem 1.3rem 2.65rem;
 }
 /*Default Button styles*/
 .btn {
@@ -96,10 +105,6 @@ h5 {
 }
 .bgSecondary {
   background-color: #ffff00;
-}
-/*Site Specific constants*/
-html {
-  font-family: "Helvetica Neue", Arial, Helvetica;
 }
 /*Main block css */
 /*All non classified css */
