--- a/LESS_New/main.less
+++ b/LESS_New/main.less
@@ -13,13 +13,6 @@
 @import "constants/helpers.less";
 @import "constants/colors.less";
 
-/*Site Specific constants*/
-
-@import "site/site-mixins.less";
-@import "site/site-variables.less";
-@import "site/site-elements.less";
-@import "site/site-colors.less";
-
 /*Main block css */
 
 @import "constants/layout/header.less";
@@ -33,9 +26,9 @@
 
 /*If mobile first start with xs, if desktop first start with xl */
 
-@import "site/xl/main-xl.less";
-@import "site/lg/main-lg.less";
-@import "site/md/main-md.less";
-@import "site/sm/main-sm.less";
-@import "site/xs/main-xs.less";
+@import "responsive/xl/main-xl.less";
+@import "responsive/lg/main-lg.less";
+@import "responsive/md/main-md.less";
+@import "responsive/sm/main-sm.less";
+@import "responsive/xs/main-xs.less";
 
