updated main.less instructions

--- a/LESS_New/main.css
+++ b/LESS_New/main.css
@@ -108,4 +108,5 @@ h5 {
 }
 /*Main block css */
 /*All non classified css */
-/*If mobile first start with xs, if desktop first start with xl */
+/*If mobile first start with xs, if desktop first start with xl
+  Remove xl if desktop first and xs if mobile first */
