--- a/LESS_New/main.less
+++ b/LESS_New/main.less
@@ -24,7 +24,8 @@
 
 @import "constants/layout/layout.less";
 
-/*If mobile first start with xs, if desktop first start with xl */
+/*If mobile first start with xs, if desktop first start with xl
+  Remove xl if desktop first and xs if mobile first */
 
 @import "responsive/xl/main-xl.less";
 @import "responsive/lg/main-lg.less";
