--- a/LESS_New/constants/elements.less
+++ b/LESS_New/constants/elements.less
@@ -3,25 +3,26 @@ html {
   font-size: 62.5%;
 }
 p {
-  .font-size(14);
+  .font-size(@font-size);
 }
 h1 {
-  .font-size(24);
+  .font-size(@font-size + 10);
 }
 h2 {
-  .font-size(22);
+  .font-size(@font-size + 8);
 }
 h3 {
-  .font-size(20);
+  .font-size(@font-size + 6);
 }
 h4 {
-  .font-size(18);
+  .font-size(@font-size + 4);
 }
 h5 {
-  .font-size(16);
+  .font-size(@font-size + 2);
   .rem-property(left, 20);
   .rem-property(top, 15);
-  .padding(12, 16, 13, 26.5);
+  .padding(12, 16, 13, 2);
+  .background-rgba(136, 12, 68, 0.8);
 }
 
 /*Default Button styles*/
