--- a/LESS_New/constants/reset.css
+++ b/LESS_New/constants/reset.css
@@ -82,9 +82,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font-family: inherit;
-  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -120,4 +117,7 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+* {
+  outline: 0;
 }
