--- a/LESS_New/constants/reset.less
+++ b/LESS_New/constants/reset.less
@@ -14,9 +14,6 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font-family: inherit;
-  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -39,4 +36,7 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+* {
+  outline: 0;
 }
