Updated some variable names to be better represented

--- a/LESS_New/constants/elements.less
+++ b/LESS_New/constants/elements.less
@@ -96,7 +96,10 @@ h5 {
     }
   }
 }
-.radio {
+.radio{
+  .radio-mixin;
+}
+.radio-mixin(@size : 14) {
   display: none;
   + label {
     -webkit-appearance: none;
