--- a/LESS_New/constants/variables.less
+++ b/LESS_New/constants/variables.less
@@ -16,37 +16,41 @@
 @primary-font-color : black;
 @second-font-color : white;
 
-@primaryColor : white;
-@secondaryColor :black;
+@primary-color : white;
+@secondary-color :black;
 
 /*Button colors*/
 
 /*Primary buttons*/
-@btn-main-color : #ffffff;
+@btn-main-bg : #ffffff;
 @btn-main-border : #ffffff;
-@btn-main-text : #000000;
+@btn-main-color : #000000;
 
-@btn-main-color-hover : #000000;
+@btn-main-bg-hover : #000000;
 @btn-main-border-hover : #000000;
-@btn-main-text-hover : #ffffff;
+@btn-main-color-hover : #ffffff;
 
 /*Secondary Buttons if needed*/
 
-@btn-second-color : #ffffff;
+@btn-second-bg : #ffffff;
 @btn-second-border : #ffffff;
-@btn-second-text : #000000;
+@btn-second-color : #000000;
 
-@btn-second-color-hover : #000000;
+@btn-second-bg-hover : #000000;
 @btn-second-border-hover : #000000;
-@btn-second-text-hover : #ffffff;
+@btn-second-color-hover : #ffffff;
 
 @font-size : 14;
 
 
-@font-light: arial;
-@font-regular: arial;
-@font-bold: arial;
+@font-light: arial, sans-serif;
+@font-regular: arial, sans-serif;
+@font-bold: arial, sans-serif;
 
+//add priamry.secondary/tertiary
+
+
+//Intended to set heights and width of checkboxes as standard
 @h : 50px;
 @w : 50px;
 @checked : 50px;
